kubernetes/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fast-api
  labels:
    app: fast-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: fast-api
  template:
    metadata:
      labels:
        app: fast-api
    spec:
      containers:
      - name: fast-api
        image: 1abdulrehman/k8s-fastapi:0.03
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 200m 
            memory: 300Mi
          limits:
           memory: 400Mi  
           cpu: 300m
